--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-ctransformers==0.2.5
 sentence-transformers==2.2.2
 pinecone-client
-langchain==0.0.225
+langchain
 flask
-PyPDF2
+Pypdf
+pinecone[grpc]
+langchain-pinecone
+langchain_community
+langchain_openai
+langchain_experimental
 python-dotenv
-
--e .
